MDEV-37903: Incorrect GTID event for ALTER TABLE

When ALTER TABLE ... ENGINE=MRG_MyISAM was binlogged, the GTID event was
incorrect, it was missing the 'ddl' mark. This would then lead to incorrect
handling of the ALTER in parallel replication.

The root cause is an internal commit during the ALTER that clears the
m_unsafe_rollback_flags of the transaction object.

This is a tentative patch that fixes the problem by explicitly re-marking
the transaction object with DID_DDL. To be discussed if this is the correct
fix.

Signed-off-by: Kristian Nielsen <knielsen@knielsen-hq.org>